# EshyWM

./: .exampleeshywmconfig  .gitignore  CMakeLists.txt  Makefile  config.h  domain.xml  eshywm.cpp  eshywm.h  eshywm_tiny.cpp  example-picomconfig.conf  iar.sh  install_and_run.sh  main.cpp  util.cpp  util.h  window.cpp  window.h  window_manager.cpp  window_manager.h
example_configs/: .eshywm  eshywm.conf  picom.conf  picom_anims.conf
scripts/: build.sh  iarr.sh
source/: X11.cpp  background.cpp  button.cpp  config.cpp  container.cpp  context_menu.cpp  eshywm.cpp  image.cpp  main.cpp  menu_base.cpp  run_menu.cpp  slot.cpp  switcher.cpp  system.cpp  taskbar.cpp  util.cpp  window.cpp  window_data.cpp  window_manager.cpp
source/includes/: X11.h  background.h  button.h  config.h  container.h  context_menu.h  eshywm.h  image.h  menu_base.h  run_menu.h  slot.h  switcher.h  system.h  taskbar.h  util.h  window.h  window_data.h  window_list_container.h  window_manager.h  window_position_data.h
